--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
-<body class="bg-[#F4F7FF] h-screen">
+<body class="bg-[#F4F7FF] h-screen poppins">
     <header class="container mx-auto pt-6">
         <div class="navbar bg-white rounded-2xl px-6 py-5">
             <div class="flex-1">
@@ -30,5 +30,146 @@
             </div>
           </div>
     </header>
+
+    <main class="bg-[#FFFFFF] p-6 mt-[20px] container mx-auto">
+        <div class=" bg-white">
+            <div class="grid grid-cols-4 gap-8">
+                <div class="col-span-1 flex justify-center items-center gap-6 bg-[#F4F7FF] px-6 py-8 rounded-xl">
+                    <img class="bg-white rounded-full p-[18px]" src="assets/checkbox.png" alt="">
+                    <div class="text-[#00303C]">
+                        <p class="font-medium">Task Assigned</p>
+                        <p class="text-2xl font-bold ">05</p>
+                    </div>
+                </div>
+                <div class="col-span-2 rounded-xl flex justify-center items-center gap-[22px] py-8 px-10" style="background: linear-gradient(92deg, #3752FD 0.25%, #6C7FFA 52.64%, #9BA8F8 99.84%)">
+                    <img src="assets/board.png" alt="">
+                    <p class="text-2xl font-medium text-white">Discover Something <br>
+                         New Today!</p>
+                </div>
+                <div class="col-span-1 flex justify-center items-center gap-6 bg-[#F4F7FF] px-6 py-8 rounded-xl">
+                    <img class="bg-white rounded-lg p-[18px]" src="assets/calender.png" alt="">
+                    <div class="text-[#00303C]">
+                        <p class="font-medium">Wed ,
+                            </p>
+                        <p class="text-2xl font-bold ">Jul 28 2025</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-8 grid grid-cols-3 gap-4">
+                
+                <div class="card bg-[#F4F7FF] w-96 text-[#00303C] ">
+                    <div class="card-body ">
+                      <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">ShopEase</h2>
+                      <p class="text-2xl font-medium my-4">Fix Mobile Button Issue</p>
+                      <div class="text-ellipsis p-4 bg-white rounded-lg">
+                        <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            and ensure onClick works properly</p>
+                      </div>
+                      <div class="card-actions justify-between items-center mt-6">
+                            <div>
+                                <p class="opacity-[0.7]">Deadline</p>
+                                <p class="text-base font-medium">21 March 2025</p>
+                            </div>
+                        <button class=" bg-[#3752FD] rounded-lg py-3 px-[20px] text-base font-medium text-white">Completed</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-[#F4F7FF] w-96 text-[#00303C] ">
+                    <div class="card-body ">
+                      <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">CloudSync</h2>
+                      <p class="text-2xl font-medium my-4">Add Dark Mode</p>
+                      <div class="text-ellipsis p-4 bg-white rounded-lg">
+                        <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]">Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                      </div>
+                      <div class="card-actions justify-between items-center mt-6">
+                            <div>
+                                <p class="opacity-[0.7]">Deadline</p>
+                                <p class="text-base font-medium">21 March 2025</p>
+                            </div>
+                        <button class=" bg-[#3752FD] rounded-lg py-3 px-[20px] text-base font-medium text-white">Completed</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-[#F4F7FF] w-96 text-[#00303C] ">
+                    <div class="card-body ">
+                      <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">SwiftPay</h2>
+                      <p class="text-2xl font-medium my-4">Optimize  Home page </p>
+                      <div class="text-ellipsis p-4 bg-white rounded-lg">
+                        <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                            and ensure onClick works properly</p>
+                      </div>
+                      <div class="card-actions justify-between items-center mt-6">
+                            <div>
+                                <p class="opacity-[0.7]">Deadline</p>
+                                <p class="text-base font-medium">21 March 2025</p>
+                            </div>
+                        <button class=" bg-[#3752FD] rounded-lg py-3 px-[20px] text-base font-medium text-white">Completed</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-[#F4F7FF] w-96 text-[#00303C] ">
+                    <div class="card-body ">
+                      <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">Meta</h2>
+                      <p class="text-2xl font-medium my-4">Add new emoji 🤲</p>
+                      <div class="text-ellipsis p-4 bg-white rounded-lg">
+                        <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            and ensure onClick works properly</p>
+                      </div>
+                      <div class="card-actions justify-between items-center mt-6">
+                            <div>
+                                <p class="opacity-[0.7]">Deadline</p>
+                                <p class="text-base font-medium">21 March 2025</p>
+                            </div>
+                        <button class=" bg-[#3752FD] rounded-lg py-3 px-[20px] text-base font-medium text-white">Completed</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-[#F4F7FF] w-96 text-[#00303C] ">
+                    <div class="card-body ">
+                      <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">Google LLC</h2>
+                      <p class="text-2xl font-medium my-4">Integrate OpenAI API</p>
+                      <div class="text-ellipsis p-4 bg-white rounded-lg">
+                        <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            and ensure onClick works properly</p>
+                      </div>
+                      <div class="card-actions justify-between items-center mt-6">
+                            <div>
+                                <p class="opacity-[0.7]">Deadline</p>
+                                <p class="text-base font-medium">21 March 2025</p>
+                            </div>
+                        <button class=" bg-[#3752FD] rounded-lg py-3 px-[20px] text-base font-medium text-white">Completed</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-[#F4F7FF] w-96 text-[#00303C] ">
+                    <div class="card-body ">
+                      <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">Glassdoar</h2>
+                      <p class="text-2xl font-medium my-4">Improve Job searching </p>
+                      <div class="text-ellipsis p-4 bg-white rounded-lg">
+                        <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            and ensure onClick works properly</p>
+                      </div>
+                      <div class="card-actions justify-between items-center mt-6">
+                            <div>
+                                <p class="opacity-[0.7]">Deadline</p>
+                                <p class="text-base font-medium">21 March 2025</p>
+                            </div>
+                        <button class=" bg-[#3752FD] rounded-lg py-3 px-[20px] text-base font-medium text-white">Completed</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+
+
+
+
+            
+        </div>
+        <div>
+
+        </div>
+    </main>
+
 </body>
 </html>
