--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
-<body class="bg-[#F4F7FF] h-screen poppins">
+<body id="body" class="bg-[#F4F7FF]  poppins">
     <header class="container mx-auto pt-6">
         <div class="navbar bg-white rounded-2xl px-6 py-5">
             <div class="flex-1">
@@ -24,15 +24,15 @@
                     <p id="checkbox-number" class="text-[#1E1E1E] font-bold text-[32px]">20</p>
                   </div>
                   <div class="bg-[#F4F7FF] p-3 rounded-full">
-                    <img src="assets/theme-btn.png" alt="">
+                    <img id="color-theme" src="assets/theme-btn.png" alt="">
                   </div>
               </ul>
             </div>
           </div>
     </header>
 
-    <main class="grid grid-cols-4 gap-6 bg-[#F4F7FF]  container mx-auto mt-[20px]">
-        <div class="col-span-3 bg-[#FFFFFF] p-6 ">
+    <main class="grid grid-cols-4 gap-6   container mx-auto mt-[20px]">
+        <div class="col-span-3 bg-[#FFFFFF] p-6 rounded-2xl">
             <div class="col-span-1 bg-white">
                 <div class="grid grid-cols-4 gap-4">
                     <div class="col-span-1 flex justify-center items-center gap-4 bg-[#F4F7FF] px-2 py-0 rounded-xl">
@@ -52,7 +52,7 @@
                         <div class="text-[#00303C]">
                             <p class="font-medium">Wed ,
                                 </p>
-                            <p class="text-2xl font-bold ">Jul 28 2025</p>
+                            <p id="date" class="text-2xl font-bold ">Jul 28 2025</p>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">ShopEase</h2>
                           <p class="text-2xl font-medium my-4">Fix Mobile Button Issue</p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
-                            <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            <p id="title-one" class="title truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
                           </div>
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
@@ -81,7 +81,7 @@
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">CloudSync</h2>
                           <p class="text-2xl font-medium my-4">Add Dark Mode</p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
-                            <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]">Store the user's preference in <br> localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                            <p class="title-one truncate text-[#000000] font-normal text-base opacity-[0.5]">Store the user's preference in <br> localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
                           </div>
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
@@ -97,7 +97,7 @@
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">SwiftPay</h2>
                           <p class="text-2xl font-medium my-4">Optimize  Home page </p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
-                            <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]">Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            <p class="title-one truncate text-[#000000] font-normal text-base opacity-[0.5]">Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
                           </div>
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
@@ -164,15 +164,15 @@
                 
             </div>
         </div>
-        <div class="col-span-1 content-start ">
-            <div class="flex items-center flex-col gap-4 bg-white h-screen pt-5">
+        <div class="col-span-1 content-start">
+            <div class="rounded-2xl flex items-center flex-col gap-4 bg-white h-full pt-5">
                 <div class="flex items-center gap-2 justify-center">
                     <img class="" src="assets/activity.png" alt="">
                     <p class="text-[#00303C] font-medium text-[20px]"> Activity Log</p>
                 </div>
-                <button class="text-base font-medium text-white py-3 px-5 bg-[#3752FD] rounded-lg">Clear History</button>
-                <div >
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis reiciendis voluptate quo a quasi beatae iure id quibusdam, ducimus aut ratione illo expedita accusantium ex, eos doloremque amet eius voluptatibus?</p>
+                <button id="clear-history" class="text-base font-medium text-white py-3 px-5 bg-[#3752FD] rounded-lg">Clear History</button>
+                <div id="log-activity" class="mt-2" >
+                    
                 </div>
             </div>
             <div>
