--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 <link rel="stylesheet" href="style/style.css">
-    <title>Document</title>
+    <title>Dev Board</title>
 </head>
 <body id="body" class="bg-[#F4F7FF]  poppins">
     <header class="container mx-auto pt-6">
         <div class="navbar bg-white rounded-2xl px-6 py-5">
-            <div class="flex-1">
-              <a class="btn btn-ghost text-xl">
+            <div class="hover:bg-transparent   flex-1">
+              <a href="#" class=" flex justify-start items-center gap-4 border-transparent  text-xl">
                 <img src="assets/logo.png" alt="">
                 <p class="text-4xl font-light text-[#00303C] poppins">Dev<span class="font-bold">Board</span></p>
               </a>
@@ -42,7 +42,7 @@
                             <p id="task" class="text-2xl font-bold ">06 </p>
                         </div>
                     </div>
-                    <div class="col-span-2 rounded-xl flex justify-center items-center gap-[22px] px-2 py-0" style="background: linear-gradient(92deg, #3752FD 0.25%, #6C7FFA 52.64%, #9BA8F8 99.84%)">
+                    <div id="blog-page" class="col-span-2 rounded-xl flex justify-center items-center gap-[22px] px-2 py-0" style="background: linear-gradient(92deg, #3752FD 0.25%, #6C7FFA 52.64%, #9BA8F8 99.84%)">
                         <img src="assets/board.png" alt="">
                         <p class="text-2xl font-medium text-white">Discover Something <br>
                              New Today!</p>
@@ -170,7 +170,7 @@
                     <img class="" src="assets/activity.png" alt="">
                     <p class="text-[#00303C] font-medium text-[20px]"> Activity Log</p>
                 </div>
-                <button id="clear-history" class="text-base font-medium text-white py-3 px-5 bg-[#3752FD] rounded-lg">Clear History</button>
+                <button id="clear-history" class="cursor-pointer text-base font-medium text-white py-3 px-5 bg-[#3752FD] rounded-lg">Clear History</button>
                 <div id="log-activity" class="mt-2" >
                     
                 </div>
