--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                     </div>
                     <div class="col-span-1 flex justify-center items-center gap-4 bg-[#F4F7FF] px-2 py-4 rounded-xl">
                         <img class="bg-white rounded-lg p-[18px]" src="assets/calender.png" alt="">
-                        <div class="text-[#00303C]">
-                            <p class="font-medium">Wed ,
-                                </p>
-                            <p id="date" class="text-2xl font-bold ">Jul 28 2025</p>
+                        <div id="date" class="flex  text-[#00303C]">
+                            
+                            
                         </div>
                     </div>
                 </div>
@@ -70,7 +69,7 @@
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
                                     <p class="opacity-[0.7]">Deadline</p>
-                                    <p class="text-base font-medium">21 March 2025</p>
+                                    <p  class="time-card text-base font-medium">21 March 2025</p>
                                 </div>
                             <button id="" class="completed-btn cursor-pointer  bg-[#3752FD] rounded-lg py-3 px-[10px] text-base font-medium text-white">Completed</button>
                           </div>
@@ -86,7 +85,7 @@
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
                                     <p class="opacity-[0.7]">Deadline</p>
-                                    <p class="text-base font-medium">21 March 2025</p>
+                                    <p class="time-card text-base font-medium">21 March 2025</p>
                                 </div>
                             <button id="" class="completed-btn cursor-pointer bg-[#3752FD] rounded-lg py-3 px-[10px] text-base font-medium text-white">Completed</button>
                           </div>
@@ -103,7 +102,7 @@
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
                                     <p class="opacity-[0.7]">Deadline</p>
-                                    <p class="text-base font-medium">21 March 2025</p>
+                                    <p class="time-card text-base font-medium">21 March 2025</p>
                                 </div>
                             <button id="" class="completed-btn cursor-pointer bg-[#3752FD] rounded-lg py-3 px-[10px] text-base font-medium text-white">Completed</button>
                           </div>
@@ -120,7 +119,7 @@
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
                                     <p class="opacity-[0.7]">Deadline</p>
-                                    <p class="text-base font-medium">21 March 2025</p>
+                                    <p class="time-card text-base font-medium">21 March 2025</p>
                                 </div>
                             <button id="" class="completed-btn cursor-pointer bg-[#3752FD] rounded-lg py-3 px-[10px] text-base font-medium text-white">Completed</button>
                           </div>
@@ -137,7 +136,7 @@
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
                                     <p class="opacity-[0.7]">Deadline</p>
-                                    <p class="text-base font-medium">21 March 2025</p>
+                                    <p class="time-card text-base font-medium">21 March 2025</p>
                                 </div>
                             <button id="" class="completed-btn cursor-pointer bg-[#3752FD] rounded-lg py-3 px-[10px] text-base font-medium text-white">Completed</button>
                           </div>
@@ -154,7 +153,7 @@
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
                                 <div>
                                     <p class="opacity-[0.7]">Deadline</p>
-                                    <p class="text-base font-medium">21 March 2025</p>
+                                    <p class="time-card text-base font-medium">21 March 2025</p>
                                 </div>
                             <button id="" class="completed-btn cursor-pointer bg-[#3752FD] rounded-lg py-3 px-[10px] text-base font-medium text-white">Completed</button>
                           </div>
@@ -181,5 +180,7 @@
         </div>
     </main>
 <script src="script/main.js"></script>
+<script src="script/blog.js"></script>
+<script src="script/date.js"></script>
 </body>
 </html>
