--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div class="card bg-[#F4F7FF] text-[#00303C] ">
                         <div class="card-body ">
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">ShopEase</h2>
-                          <p class="text-2xl font-medium my-4">Fix Mobile Button Issue</p>
+                          <p class="title text-2xl font-medium my-4">Fix Mobile Button Issue</p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
-                            <p id="title-one" class="title truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            <p id="" class=" truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
                           </div>
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
@@ -78,7 +78,7 @@
                     <div class="card bg-[#F4F7FF] text-[#00303C] ">
                         <div class="card-body ">
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">CloudSync</h2>
-                          <p class="text-2xl font-medium my-4">Add Dark Mode</p>
+                          <p class="title text-2xl font-medium my-4">Add Dark Mode</p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
                             <p class="title-one truncate text-[#000000] font-normal text-base opacity-[0.5]">Store the user's preference in <br> localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
                           </div>
@@ -94,9 +94,9 @@
                     <div class="card bg-[#F4F7FF] text-[#00303C] ">
                         <div class="card-body ">
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">SwiftPay</h2>
-                          <p class="text-2xl font-medium my-4">Optimize  Home page </p>
+                          <p class="title text-2xl font-medium my-4">Optimize  Home page </p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
-                            <p class="title-one truncate text-[#000000] font-normal text-base opacity-[0.5]">Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
+                            <p class=" truncate text-[#000000] font-normal text-base opacity-[0.5]">Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
                           </div>
                           <div class="card-actions flex-nowrap justify-between items-center mt-6">
@@ -111,7 +111,7 @@
                     <div class="card bg-[#F4F7FF] text-[#00303C] ">
                         <div class="card-body ">
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">Meta</h2>
-                          <p class="text-2xl font-medium my-4">Add new emoji 🤲</p>
+                          <p class="title text-2xl font-medium my-4">Add new emoji 🤲</p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
                             <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
@@ -128,7 +128,7 @@
                     <div class="card bg-[#F4F7FF] text-[#00303C] ">
                         <div class="card-body ">
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">Google LLC</h2>
-                          <p class="text-2xl font-medium my-4">Integrate OpenAI API</p>
+                          <p class="title text-2xl font-medium my-4">Integrate OpenAI API</p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
                             <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
@@ -145,7 +145,7 @@
                     <div class="card bg-[#F4F7FF] text-[#00303C] ">
                         <div class="card-body ">
                           <h2 class="text-[#00303C] bg-white py-2 px-4 w-[40%] card-title inline-block font-normal">Glassdoar</h2>
-                          <p class="text-2xl font-medium my-4">Improve Job searching </p>
+                          <p class="title text-2xl font-medium my-4">Improve Job searching </p>
                           <div class="text-ellipsis p-4 bg-white rounded-lg">
                             <p class="truncate text-[#000000] font-normal text-base opacity-[0.5]" >Debug using Chrome <br> DevTools, check for overlapping elements, and ensure onClick works properly
                                 and ensure onClick works properly</p>
