--- a/html/blog.html
+++ b/html/blog.html
@@ -25,8 +25,8 @@
             </div>
             <div class="navbar-end">
                 <div>
-                    <button id="blog_back_btn" class="btn btn-primary bg-[#3752FD] my-3 rounded-lg border-none">Back to
-                        Desk</button>
+                    <a href="../index.html"><button id="blog_back_btn" class="btn btn-primary bg-[#3752FD] my-3 rounded-lg border-none">Back to
+                        Desk</button></a>
                 </div>
             </div>
         </div>
