--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
                             <p id="task" class="text-2xl font-bold ">06 </p>
                         </div>
                     </div>
-                    <div id="blog-page" class="col-span-2 rounded-xl flex justify-center items-center gap-[22px] px-2 py-0" style="background: linear-gradient(92deg, #3752FD 0.25%, #6C7FFA 52.64%, #9BA8F8 99.84%)">
-                        <img src="assets/board.png" alt="">
-                        <p class="text-2xl font-medium text-white">Discover Something <br>
-                             New Today!</p>
-                    </div>
+
+  <div id="blog-page" class="col-span-2 rounded-xl flex justify-center items-center gap-[22px] px-2 py-0" style="background: linear-gradient(92deg, #3752FD 0.25%, #6C7FFA 52.64%, #9BA8F8 99.84%)">
+  <a href="html/blog.html" class="flex">
+    <img src="assets/board.png" alt="">
+  <p class="text-2xl font-medium text-white">Discover Something <br>
+       New Today!</p>
+  </a>
+</div>
+
                     <div class="col-span-1 flex justify-center items-center gap-4 bg-[#F4F7FF] px-2 py-4 rounded-xl">
                         <img class="bg-white rounded-lg p-[18px]" src="assets/calender.png" alt="">
                         <div id="date" class="flex  text-[#00303C]">
